# NMPDE

./: CMakeLists.txt  README.md  gitignore.txt  main.cpp  main.cpp:Zone.Identifier  test-installation
mesh/: 10.012500.msh  m0-.msh  m0.msh  m00.012500.msh  m1.msh  mesh--0.750000.vtk  mesh.msh  mg0.geo  mg0_1d.geo  mg0_3d.geo  mg0_3d.msh  mg1.geo  mg1.msh  mg1_1d.geo  mg1_1d.msh  mg1_3d.geo  square_mesh.geo  square_mesh.msh
navier-stokes-main/stokes-time/src/: stokes-time.cpp
nmpde-labs-aa-23-24-main/nmpde-labs-aa-23-24-main/common/: cmake-common.cmake
nmpde-labs-aa-23-24-main/nmpde-labs-aa-23-24-main/lab-07/src/: LinearElasticity.cpp  LinearElasticity.hpp  NonLinearDiffusion.cpp  NonLinearDiffusion.hpp  lab-07-exercise1.cpp
nmpde-labs-aa-23-24-main/nmpde-labs-aa-23-24-main/lab-08/src/: Heat.cpp  Heat.hpp  HeatNonLinear.cpp  HeatNonLinear.hpp  lab-08-exercise1.cpp
nmpde-labs-aa-23-24-main/nmpde-labs-aa-23-24-main/lab-10/mesh/: mesh-problem-1.vtk  mesh-square.geo
nmpde-labs-aa-23-24-main/nmpde-labs-aa-23-24-main/lab-10/src/: Poisson2D.cpp  Poisson2D.hpp  lab-10.cpp
scripts/: convergence.csv
src_1D_Mesh/: mesh_main.cpp
src_2D_Mesh/: mesh_main.cpp
src_domain_decomposition/: Poisson2D.cpp  Poisson2D.hpp  domain_decomposition_main.cpp
src_domain_decomposition_1D/: Poisson2D.cpp  Poisson2D.hpp  domain_decomposition_main.cpp
src_domain_decomposition_old/: NMPDE.code-workspace  Poisson2D.cpp  Poisson2D.hpp
src_elliptic/: Elliptic.cpp  Elliptic.hpp  elliptic_main.cpp
src_elliptic_1D/: Elliptic.cpp  Elliptic.hpp  elliptic_main.cpp
src_linear_elasticity/: LinearElasticity.cpp  LinearElasticity.hpp
src_linear_elasticity_wrong/: LinearElasticity.cpp  LinearElasticity.hpp  linear_elasticity_main.cpp
src_nonlinear_steady/: NonLinearDiffusion.cpp  NonLinearDiffusion.hpp  NonLinear_main.cpp
src_nonlinear_td/: HeatNonLinear.cpp  HeatNonLinear.hpp  NonLinear_main.cpp
src_parabolic/: Parabolic.cpp  Parabolic.hpp  parabolic_main.cpp
src_parabolic_1D/: Parabolic.cpp  Parabolic.hpp  parabolic_main.cpp
src_parabolic_neumann/: Parabolic.cpp  Parabolic.hpp  parabolic_main.cpp
src_parabolic_neumann_1D/: Parabolic.cpp  Parabolic.hpp  parabolic_main.cpp
src_stokes/: Stokes.cpp  Stokes.hpp  stokes_main.cpp
src_stokes_si_td/: stokes-time.cpp
src_stokes_td/: stokes-time.cpp  stokes-time.hpp
